[package]
name = "ruuvi-prometheus-rs"
version = "0.2.11"
edition = "2024"
authors = ["Andreas Weiden <andreas.weiden@skillbyte.de>"]
readme = "README.md"
repository = "https://github.com/graipher/ruuvi-prometheus-rs"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"

[dependencies]
serde_json = "1.0.140"
tokio = { version = "1.43.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.218", features = ["derive"] }
compile-time = "0.2.0"
ruuvi-decoders = "1.0.0"
bluer = { version = "0.17.4", features = ["bluetoothd", "tokio-stream"] }
futures = "0.3.31"
metrics-process = { version = "2.4.2", features = ["use-gauge-on-cpu-seconds-total"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.18.0"
metrics-util = "0.20.0"
duration-string = "0.5.3"
